...
              slivers: [
                SliverAppBar(
                  centerTitle: true,
                  title: Text(
                    kScreenModeTitleMap[widget.mode.toString()].toUpperCase() +
                        " post".toUpperCase(),
                    key: ValueKey("Post-add-or-edit-screen-title-text"),
                  ),
                  leading: IconButton(
                    key: ValueKey("back-button"),
                    icon: Icon(Icons.chevron_left_sharp),
                    onPressed: () async {
                      Post editingPost =
                          Post.fromData(textController.text, postImages);
                      if (!isPostEdited(editingPost, widget.post))
                        //if post has not been changed then allow to pop
...
